[package]
name = "resolvo-rpm"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = [
    "Wolf Vollprecht <w.vollprecht@gmail.com>",
    "Daniel Alley <dalley@redhat.com",
]
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.3", features = ["blocking"] }
resolvo = "0.10.2"
rpm = "0.23"
rpmrepo_metadata = "0.3.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
version-compare = "0.2.1"
