[package]
name = "resolvo-rpm"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = [
    "Wolf Vollprecht <w.vollprecht@gmail.com>",
    "Daniel Alley <dalley@redhat.com",
]
readme = "README.md"

[dependencies]
ahash = "0.8.12"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.3", features = ["blocking"] }
resolvo = { path = "../resolvo" }
rpm-version = "0.4"
rpmrepo_metadata = { path = "../rpmrepo_metadata" }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "resolve"
harness = false
